--- a/modules/luci-mod-admin-full/luasrc/view/cbi/wireless_modefreq.htm
+++ b/modules/luci-mod-admin-full/luasrc/view/cbi/wireless_modefreq.htm
@@ -80,7 +80,7 @@
 		if (!isNaN(vals.selected))
 			sel.selectedIndex = vals.selected;
 
-		sel.parentNode.style.display = (sel.options.length <= 1) ? 'none' : '';
+		//sel.parentNode.style.display = (sel.options.length <= 1) ? 'none' : '';
 		sel.vals = vals;
 	}
 
@@ -132,11 +132,21 @@
 			mode.value = '';
 
 		cbi_toggle_wifi_mode(id);
-
-		if (/a/.test(<%= luci.http.write_json(self.map:get(section, "hwmode")) %>))
-			band.value = '11a';
-		else
-			band.value = '11g';
+		
+		var hwmode = <%= luci.http.write_json(self.map:get(section, "hwmode")) %>;
+		if (hwmode) {
+			if (/a/.test(hwmode))
+				band.value = '11a';
+			else
+				band.value = '11g';
+		}
+		else {
+			var band = <%= luci.http.write_json(self.map:get(section, "band")) %>;
+			if ("5g" == band)
+				band.value = '11a';
+			else
+				band.value = '11g';
+		}
 
 		cbi_toggle_wifi_band(id);
 
